--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -49,12 +49,100 @@ header, main, footer{
   font-size: 16px;
   text-align: center;
   color: #FFFFFF;
-  width: 183px;
+  max-width: 183px;
   padding: 10px 30px;
-  height: 44px;
   border: none;
   border-radius: 50px;
 }
 .btn--call {
   background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
+}
+.burger-box{
+  display: none;
+  font-size: 30px;
+  margin-left: 30px;
+}
+.section{
+  padding: 0 312px;
+}
+.first-screen{
+  background-image: url('../img/main-screen__bk.png');
+}
+.first-screen__wrapper{
+  padding-top: 270px;
+  padding-bottom: 218px;
+}
+.first-screen__title{
+  font-size: 64px;
+  font-weight: bold;
+  line-height: 140%;
+  margin-bottom: 50px;
+}
+.timer {
+  display: flex;
+}
+.timer__item {
+  background: #121212;
+  padding: 20px 30px;
+  margin-right: 30px;
+}
+
+.timer__count {
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 140%;
+  text-align: center;
+}
+.timer__desc {
+  font-size: 16px;
+  line-height: 140%;
+  text-align: center;
+  opacity: 0.4;
+}
+@media screen and (max-width: 1425px) {
+  .menu{
+    padding-right: 56px;
+  }  
+}
+@media screen and (max-width: 1210px) {
+  .menu__item:not(:last-child) {
+    margin-right: 30px;  
+  } 
+}
+@media screen and (max-width: 1075px) {
+  .burger-box{
+    display: block;
+  }
+  .menu{
+    position: fixed;
+    top: 0;
+    left: -200px;
+    transition: 1s;
+  }
+  .menu__list{
+    height: 100vh;
+    flex-direction: column;
+    justify-content: space-evenly;
+    background: #121212;
+    padding-left: 20px;
+  }
+  .menu__item:not(:last-child){
+    padding-right: 0;  
+  }
+  .menu--open{
+  left: 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  .header{
+    flex-direction: column;
+    padding: 15px 10px;
+  }
+  .logo{
+    margin-bottom: 25px;
+  }
+  .header__wrapper{
+    width: 100%;
+    justify-content: space-between;
+  }
 }
