--- a/Lesson_5/assets/css/style_home_1.css
+++ b/Lesson_5/assets/css/style_home_1.css
@@ -1,19 +1,25 @@
 *{
  padding: 0;
  margin: 0; 
+ box-sizing: border-box;
 }
 .box{
   width: 350px;
   border: 1px solid #7070ff;
   margin: auto;
   margin-top: 50vh;
-  left: 0;
-  bottom: 0;
-  right: 0;
   position: relative; 
   text-align: center;
 }
-
+span{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  margin-top: -0.5em;
+  margin-left: -175px;
+}
 .load{
  position: absolute;
  background-color: #9999ff; 
@@ -21,4 +27,5 @@
  height: 100%;
  z-index: -1;
  top: 0;
+ left: -1px;
 }
