--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -36,7 +36,7 @@ header, main, footer{
   display: flex;
 }
 .menu__item:not(:last-child) {
-  margin-right: 56px;  
+  padding-right: 56px;  
 }
 .menu__link {
   font-weight: 400;
@@ -49,7 +49,6 @@ header, main, footer{
   font-size: 16px;
   text-align: center;
   color: #FFFFFF;
-  max-width: 183px;
   padding: 10px 30px;
   border: none;
   border-radius: 50px;
@@ -57,13 +56,19 @@ header, main, footer{
 .btn--call {
   background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
 }
+.btn--subscribe {
+  background: linear-gradient(94.78deg, #DF5950 11.19%, #451046 93.72%);
+  font-weight: bold;
+}
 .burger-box{
   display: none;
   font-size: 30px;
   margin-left: 30px;
+  color: #000000;
 }
 .section{
-  padding: 0 312px;
+  padding-left: 312px;
+  padding-right: 312px;
 }
 .first-screen{
   background-image: url('../img/main-screen__bk.png');
@@ -86,10 +91,9 @@ header, main, footer{
   padding: 20px 30px;
   margin-right: 30px;
 }
-
 .timer__count {
-  font-weight: bold;
   font-size: 36px;
+  font-weight: bold;
   line-height: 140%;
   text-align: center;
 }
@@ -99,15 +103,57 @@ header, main, footer{
   text-align: center;
   opacity: 0.4;
 }
+.study-count {
+  background-color: #121212;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 36px;
+  padding-bottom: 36px;
+}
+.table-count__name {
+  opacity: 0.4;
+}
+.table-count__result{
+  font-weight: bold;
+  padding-left: 30px;
+}
+.progress-earned{
+  width:55%;
+}
+.progress-earned__bar{
+  width: 100%;
+  height: 6px;
+  background-color: #fff;
+}
+.progress-earned__percent{
+  width: 60%;
+  height: 100%;
+  background: linear-gradient(94.78deg, #DF5950 11.19%, #451046 93.72%);
+}
+.progress-earned__mark{
+  display: flex;
+  justify-content: space-between;
+}
+.progress-earned__number{
+  color: rgba(255, 255, 255, 0.4);
+}
 @media screen and (max-width: 1425px) {
   .menu{
     padding-right: 56px;
   }  
+  .first-screen{
+    background-position: 85% center;
+    background-size: cover;
+  }
 }
 @media screen and (max-width: 1210px) {
   .menu__item:not(:last-child) {
-    margin-right: 30px;  
-  } 
+    margin-right: 30px;
+  }
+  .section{
+    padding-left: 200px;
+    padding-right: 200px;
+  }
 }
 @media screen and (max-width: 1075px) {
   .burger-box{
@@ -116,10 +162,13 @@ header, main, footer{
   .menu{
     position: fixed;
     top: 0;
-    left: -200px;
-    background: #121212;
+    left: -225px;
+    background: #1d1d1d;
     transition: 1s;
   }
+  .menu--open{
+    left: 0;
+    }
   .menu__list{
     height: 100vh;
     flex-direction: column;
@@ -129,8 +178,32 @@ header, main, footer{
   .menu__item:not(:last-child){
     padding-right: 0;  
   }
-  .menu--open{
-  left: 0;
+  .section{
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+  .first-screen__title{
+    font-size: 50px;
+    text-align: center;
+    text-shadow: 0 1px 3px #000000;
+  }
+  .timer{
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 767px) {  
+  .first-screen__title{
+    font-size: 34px;
+  }
+  .section{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .timer{
+    justify-content: space-evenly;
+  }
+  .timer__item{
+    margin-right: 0;
   }
 }
 @media screen and (max-width: 500px) {
@@ -144,5 +217,24 @@ header, main, footer{
   .header__wrapper{
     width: 100%;
     justify-content: space-between;
+  }
+  .section{
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .first-screen{
+    background-position: 93% center;
+  }
+  .first-screen__wrapper{
+    padding-top: 160px;
+    padding-bottom: 30px;
+  }
+  .timer{
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .timer__item{
+    width: calc(50% - 5px);
+    margin-bottom: 10px;
   }
 }
