--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -16,6 +16,31 @@ header, main, footer{
   max-width: 1920px;
   margin: 0 auto;
 }
+img{
+  max-width: 100%;
+}
+.title {
+  font-size: 48px;
+  font-weight: bold;
+  line-height: 1;
+}
+.description {
+  font-size: 16px;
+  line-height: 160%;
+}
+.description--opacity-5{
+  opacity: 0.5;
+}
+.description--small{
+  font-size: 14px;
+}
+.icon{
+  display: flex;
+  align-items: center;
+}
+.icon__circle{
+  margin-right: 20px;
+}
 .header {
   width: 100%;
   position: fixed;
@@ -107,8 +132,12 @@ header, main, footer{
   background-color: #121212;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding-top: 36px;
   padding-bottom: 36px;
+}
+.table-count .table-count__row:first-child .table-count__column{
+  padding-bottom: 10px;
 }
 .table-count__name {
   opacity: 0.4;
@@ -124,6 +153,8 @@ header, main, footer{
   width: 100%;
   height: 6px;
   background-color: #fff;
+  margin-top: 8px;
+  margin-bottom: 5px;
 }
 .progress-earned__percent{
   width: 60%;
@@ -137,6 +168,77 @@ header, main, footer{
 .progress-earned__number{
   color: rgba(255, 255, 255, 0.4);
 }
+.about {
+  display: flex;
+  justify-content: space-between;
+  margin: 200px 0;
+}
+.about__wrapper {
+  margin-right: 20px;
+}
+.about__text {
+  max-width: 636px;
+  margin-top: 70px;
+}
+.about__title{
+  margin-bottom: 45px;
+}
+.fast-start__subtitle{
+  max-width: 411px;
+  margin-top: 20px;
+}
+.scale{
+  display: flex;
+  margin-top: 80px;
+}
+.scale__item{
+  width: 25%;
+}
+.scale__percent{
+  font-size: 36px;
+  font-weight: bold;
+}
+.scale__wrapper{
+  display: flex;
+  align-items: center;
+  height: 80px;
+  margin-top: 20px;
+  margin-bottom: 35px;
+}
+.scale__progress{
+  flex: 1;
+  background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
+}
+.scale__progress--reverse{
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+.scale__progress-full{
+  height: 100%;
+}
+.scale__progress-quarter{
+  height: 75%;
+}
+.scale__progress-half{
+  height: 37.5%;
+}
+.scale__progress-total{
+  height: 12.5%;
+}
+@media screen and (max-width: 1620px) {
+  .study-count{
+    flex-wrap: wrap;
+  }
+  .progress-earned{
+    width: 100%;
+    margin-top: 25px;
+  }
+.about{
+  align-items: center;
+  }
+  .about__text{
+    margin-top: 0;
+  }
+}
 @media screen and (max-width: 1425px) {
   .menu{
     padding-right: 56px;
@@ -145,9 +247,21 @@ header, main, footer{
     background-position: 85% center;
     background-size: cover;
   }
+  .about{
+    flex-direction: column;
+    margin: 100px 0;
+  }
+  .about__wrapper{
+    width: 35%;
+    margin-right: 0;
+  }
+  .about__text{
+    text-align: center;
+    margin-top: 45px;
+  }
 }
 @media screen and (max-width: 1210px) {
-  .menu__item:not(:last-child) {
+  .menu__item:not(:last-child){
     margin-right: 30px;
   }
   .section{
@@ -190,6 +304,9 @@ header, main, footer{
   .timer{
     justify-content: center;
   }
+  .about{
+    margin: 36px 0;
+  }
 }
 @media screen and (max-width: 767px) {  
   .first-screen__title{
@@ -207,6 +324,9 @@ header, main, footer{
   }
 }
 @media screen and (max-width: 500px) {
+  .title{
+    font-size: 28px;
+  }
   .header{
     flex-direction: column;
     padding: 15px 10px;
@@ -215,7 +335,7 @@ header, main, footer{
     margin-bottom: 25px;
   }
   .header__wrapper{
-    width: 100%;
+    width: 100%px;
     justify-content: space-between;
   }
   .section{
@@ -236,5 +356,21 @@ header, main, footer{
   .timer__item{
     width: calc(50% - 5px);
     margin-bottom: 10px;
+  }
+  .study-count{
+    justify-content: center;
+  }
+  .study-count__subscribe{
+    margin-top: 25px;
+    order: 2;
+  }
+  .table-count {
+    width: 100%;
+  }
+  .table-count__result{
+    text-align: right;
+  }
+  .about__wrapper{
+    width: 65%;
   }
 }
