--- a/project/assets/css/style.css
+++ b/project/assets/css/style.css
@@ -44,8 +44,15 @@ img{
   display: flex;
   align-items: center;
 }
+.icon--vertical{
+  flex-direction: column;
+}
 .icon__circle{
   margin-right: 20px;
+}
+.icon__circle--vertical{
+  margin-right: 0;
+  margin-bottom: 13px;
 }
 .header {
   width: 100%;
@@ -260,6 +267,65 @@ img{
 .advantages__description {
   text-align: center;
 }
+.partners {
+  margin-top: 200px;
+}
+.partners__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 60px;
+}
+.partners__item {
+  width: 25%;
+  padding: 29px 66px;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  border-right: 1px solid rgba(255, 255, 255, 0.3);
+}
+.partners__item:nth-child(4n) {
+  border-right: none;
+}
+.partners__item:nth-child(-n+4) {
+  border-top: none;
+}
+.programm {
+  margin-top: 243px;
+}
+.programm__subtitle {
+  margin-top: 30px;
+}
+.programm__subtitle span {
+  display: block;
+  text-align: center;
+}
+.programm__wrapper {
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
+}
+.programm__left {
+  text-align: right;
+}
+.programms__left .week{
+  padding-right: 60px;
+}
+.programms__right .week{
+  padding-left: 60px;
+}
+.programm__tree {
+  width: 6px;
+  height: 100%;
+  background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
+}
+.week {
+  max-width: 228px;
+}
+.week__description {
+  font-size: 18px;
+  line-height: 160%;
+  color: #fff;
+  margin-top: 15px;
+}
+
 
 @media screen and (max-width: 1700px) {
   .section{
@@ -332,6 +398,22 @@ img{
     margin-top: 20px;
     margin-bottom: 10px;
   }
+  .partners__item{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
+  }
+  .partners__item:nth-child(2n){
+    border-right: none;
+  }
+  .partners__item:nth-child(-n+4){
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+  }
+  .partners__item:nth-child(-n+2){
+    border-top: none;
+  }
 }
 @media screen and (max-width: 1075px) {
   .burger-box{
@@ -401,6 +483,12 @@ img{
   .advantages{
     margin-top: 45px;
   }
+  .partners{
+    margin-top: 45px;
+  }
+  .partners__wrapper{
+    margin-top: 20px;
+  }
 }
 @media screen and (max-width: 767px) {  
   .first-screen__title{
@@ -469,5 +557,8 @@ img{
   }
   .advantages__item{
     width: 100%;
+  }
+  .partners__item{
+    padding: 15px 30px;
   }
 }
